deploy/canary/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: alanchen0810/grpc-lb-istio:latest
        ports:
        - containerPort: 7000
          name: grpc
        args:
        - frontend
        - -backend.port
        - "8000"
        - -backend.host
        - backend.$(MY_POD_NAMESPACE)
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 7000
    name: grpc
    targetPort: 7000
